# discord-to-vrc-osc

./: .gitignore  Cargo.toml  README.md
config/: config.example.toml  config.toml
src/: main.rs
src/commands/: mod.rs  vrc.rs
src/config/: mod.rs
src/utils/: mod.rs
src/vrc_client/: client.rs  mod.rs  traits.rs
